<resources>
    <string name="app_name_ar">ادارة محطات البترول</string>
    <string name="am">A.m</string>
    <string name="pm">pm</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="launch_activity">Launch activity</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="notification_channel_id">Default</string>
    <string name="general_error">Something went wrong,,, Please contact the technical support team</string>
    <string name="choose">Choose</string>
    <string name="next">التالي</string>
    <string name="skip">تخطي</string>
    <string name="channel_id">palaifapp</string>
    <string name="management_software">بــــــرنـــــــــامـــــــــــج إدارة</string>
    <string name="generateor_subscription"> محطات البترول</string>
    <string name="design_programming">تصميم وبرمجة</string>
    <string name="high_five">هاي فايف</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة السر</string>
    <string name="company_code">كود الشركة</string>
    <string name="scan_qr">QR مسح رمز</string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="scan_qr_txt">QR مسح</string>
    <string name="ok">حسنا</string>
    <string name="cancel">إلغاء</string>
    <string name="customers">الزبائن</string>
    <string name="finance">المالية</string>
    <string name="disconencted_readings">قرءات المفصولين</string>
    <string name="monthly_readings">القراءات الشهرية</string>
    <string name="notitifcations">الاشعارات</string>
    <string name="about">عن التطبيق</string>
    <string name="finance_funds">الصناديق المالية</string>
    <string name="search">البحث</string>
    <string name="customer_orphone">اسم الزبون/رقم الجوال</string>
    <string name="add_customer_payment">إضافة حركة مالية</string>
    <string name="status">الحالة</string>
    <string name="view">عرض</string>
    <string name="report">تقرير</string>
    <string name="close">إغلاق</string>
    <string name="currency">العملة</string>
    <string name="box_status">حالة الصندوق</string>
    <string name="user">المستخدم</string>
    <string name="search_txt">بحث</string>
    <string name="from_date">من تاريخ</string>
    <string name="to_date">إلى تاريخ</string>
    <string name="date_of_birth_format">%s-%s-%s</string>
    <string name="funds_close">اغلاق الصندوق</string>
    <string name="recevied_money">المبلغ المستلم</string>
    <string name="funds_transfer">تحويل الصندوق</string>
    <string name="notes">الملاحظات</string>
    <string name="save">حفظ</string>
    <string name="hide">اخفاء</string>
    <string name="previous_readings">القراءة السابقة</string>
    <string name="add_transaction">إضافة حركة</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="statement">البيان</string>
    <string name="amount">المبلغ</string>
    <string name="date">التاريخ</string>
    <string name="income_type">نوع الايراد</string>
    <string name="transaction_type">نوع الحركة</string>
    <string name="transaction_month">شهر الحركة</string>
    <string name="check_number">رقم الشيك</string>
    <string name="bank">البنك</string>
    <string name="due_date">تاريخ الاستحقاق</string>
    <string name="notifications">الاشعارات</string>
    <string name="edit_data">تعديل البيانات</string>
    <string name="add_money_transaction">إضافة حركة مالية</string>
    <string name="money_account">الحساب المالي</string>
    <string name="readings">القراءات</string>
    <string name="edit_last_readings">تعديل آخر قراءة</string>
    <string name="reminders">التذكيرات</string>
    <string name="logs">السجل</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم الجوال</string>
    <string name="minimum">الحد الادنى</string>
    <string name="price">السعر</string>
    <string name="address">العنوان</string>
    <string name="region1">المنطقة 1</string>
    <string name="region2">المنطقة 2</string>
    <string name="security_number">رقم الامان</string>
    <string name="amps_number">عدد الامبير</string>
    <string name="original_number">رقم الاصيل</string>
    <string name="financial_security">الامنة المالية</string>
    <string name="drum_number">رقم الطبلون</string>
    <string name="electric_cutter">القاطع الكهربائي</string>
    <string name="add_subscription_fee"> تحميل رسوم الاشتراك</string>
    <string name="subscription_fee">رسوم الاشتراك</string>
    <string name="subscription_date">تاريخ الاشتراك</string>
    <string name="fixed_calculation">احتساب ثابت</string>
    <string name="send_sms">SMS إرسال</string>
    <string name="transaction_date">تاريخ الحركة</string>
    <string name="delete">حذف</string>
    <string name="kilo_price">سعر الكيلو</string>
    <string name="constants">الثوابت</string>
    <string name="total">الاجمالي</string>
    <string name="current_reading">القراءة الحالية</string>
    <string name="constant">الثابت</string>
    <string name="difference">الفرق</string>
    <string name="created_at">تاريخ الإنشاء</string>
    <string name="previous_value">قيمة سابقة</string>
    <string name="new_value">قيمة جديدة</string>
    <string name="account_type">نوع الحساب</string>
    <string name="finance_accounts">الحركات المالية</string>
    <string name="account_statement">كشف الحساب</string>
    <string name="edit_name">تعديل الاسم</string>
    <string name="finance_account_edit_name">الحسابات المالية- تعديل الاسم</string>
    <string name="add_money_account">إضافة حساب مالي</string>
    <string name="select_customer">اختار الزبون</string>
    <string name="select_user">اختر المستخدم</string>
    <string name="account_name">اسم الحساب</string>
    <string name="add_reminder">إضافة تذكير</string>
    <string name="text">النص</string>
    <string name="year">السنة</string>
    <string name="month">الشهر</string>
    <string name="feild">الحقل</string>
    <string name="fund_open_date">تاريخ فتح الصندوق</string>
    <string name="fund_close_date">تاريخ إغلاق الصندوق</string>
    <string name="total_revenue">إجمالي الإيرادات</string>
    <string name="total_expenses">إجمالي المصاريف</string>
    <string name="laod_transaction">تحميل حركة</string>
    <string name="discount">خصم</string>
    <string name="enter_payment_method">الرجاء ادخال طريقة الدفع</string>
    <string name="enter_check_number">الرجاء ادخال رقم الشيك</string>
    <string name="enter_check_due_date">الرجاء ادخال تاريخ استحقاق الشيك</string>
    <string name="select_bank">الرجاء اختيار البنك</string>
    <string name="enter_income_type">الرجاء اختيار نوع الايراد</string>
    <string name="enter_transaction_type">الرجاء اختيار نوع الحركة</string>
    <string name="enter_transaction_month">الرجاء اختيار شهر الحركة</string>
    <string name="enter_statement">الرجاء ادخال البيان</string>
    <string name="enter_amount">الرجاء ادخال المبلغ</string>
    <string name="select_currency">الرجاء اختيار العملة</string>
    <string name="enter_date">الرجاء ادخال التاريخ</string>
    <string name="confirm_delete_process">التأكد من عملية الحذف</string>
    <string name="confirm_delete_process_txt">هل انت متأكد من عملية الحذف ؟!</string>
    <string name="confirm">تأكيد</string>
    <string name="enter_name">الرجاء ادخال الاسم</string>
    <string name="enter_phone">الرجاء ادخال رقم الجوال</string>
    <string name="select_region1">الرجاء اختيار المنطقة 1</string>
    <string name="select_region2">الرجاء اختيار المنطقة 2</string>
    <string name="enter_minimum">الرجاء ادخال الحد الادنى</string>
    <string name="enter_price">الرجاء ادخال السعر</string>
    <string name="enter_address">الرجاء ادخال العنوان</string>
    <string name="enter_security_number">"الرجاء ادخال رقم الامان "</string>
    <string name="enter_amps_number">الرجاء ادخال عدد الامبير</string>
    <string name="enter_original_number">الرجاء ادخال رقم الاصيل</string>
    <string name="enter_financial_security">الرجاء ادخال رقم الامنة المالية</string>
    <string name="select_drum_number">"الرجاء اختيار رقم الطبلون "</string>
    <string name="select_electric_cutter">الرجاء اختيار القاطع الكهربائي</string>
    <string name="enter_subscription_fee">الرجاء ادخال رسوم الاشتراك</string>
    <string name="enter_subscription_date">الرجاء اختيار تاريخ الاشتراك</string>
    <string name="enter_previous_readings">الرجاء ادخال القراءة السابقة</string>
    <string name="enter_current_reading">الرجاء ادخال القراءة الحالية</string>
    <string name="enter_kilo_price">الرجاء ادخال سعر الكيلو</string>
    <string name="enter_constant">الرجاء ادخال الثابت</string>
    <string name="enter_difference">الرجاء ادخال الفرق</string>
    <string name="enter_total">الرجاء ادخال المبلغ الاجمالي</string>
    <string name="enter_recevied_money">الرجاء ادخال المبلغ المستلم</string>
    <string name="select_box_transfere">الرجاء اختيار تحويل الصندوق</string>
    <string name="select_account_type">الرجاء اختيار نوع الحساب</string>
    <string name="enter_account_name">الرجاء ادخال اسم الحساب</string>
    <string name="enter_username">الرجاء ادخال اسم المستخدم</string>
    <string name="enter_password">الرجاء ادخال كلمة المرور</string>
    <string name="enter_company_code">الرجاء ادخال كود الشركة</string>
    <string name="fund_already_closed">الصندوق المالي مغلق مسبقا</string>
    <string name="report_not_found">لا يوجد تقرير</string>
    <string name="clear_data">مسح البيانات</string>
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="toast_11">Settings->System->Advanced->InnerPrinter-> set black mark
        function</string>
    <string name="toast_12">Please set the printer to label mode!</string>
    <string name="printer_setting">اعدادات الطابعة</string>
    <string name="connect_method">connect method</string>
    <string name="info_title">PrinterInformation</string>
    <string name="connect_service">Connect</string>
    <string name="disconnect_service">Disconnect</string>
    <string name="blanace">الرصيد</string>
    <string name="weekly_readings">القراءات الأسبوعية</string>
    <string name="open_new_month">فتح شهر جديد</string>
    <string name="open_new_week">فتح أسبوع جديد</string>
    <string name="add_customer">اضافة زبون</string>
    <string name="select_status">يرجى اختيار الحالة</string>
    <string name="app_type2">نوع الاشتراك</string>
    <string name="collector">المحصل</string>
    <string name="weekly_calculation">نوع الاحتساب</string>
    <string name="type_customer">نوع الزبون</string>
    <string name="services_tower">احتساب الخدمات</string>
    <string name="transaction_log">سجل الحركات</string>
    <string name="no_reading">لا يوجد قراءات</string>
    <string name="log_transaction">سجل الحركات</string>
    <string name="old_value_read">ق . سابقة</string>
    <string name="new_value_read">ق . حالية</string>
    <string name="last_old_value">ق . سابقة قديمة</string>
    <string name="last_new_value">ق . سابقة الجديدة</string>
    <string name="curr_old_value">ق . حالية قديمة</string>
    <string name="curr_new_value">ق . حالية جديدة</string>
    <string name="old_price">سعر الكيلو القديم</string>
    <string name="new_price">سعر الكيلو الجديد</string>
    <string name="vehicles">المركبات</string>
    <string name="campaign">الحملة</string>
    <string name="remaining_amount">الكمية المتبقيه من الحملة المتبقية</string>
</resources>