<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layoutDirection="rtl"
    app:cardCornerRadius="@dimen/_20sdp"
    app:cardBackgroundColor="#F9F9FB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- الاسم -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|right"
            android:layout_margin="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:src="@drawable/ic_customer_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="#6D707C"
                android:fontFamily="@font/din_regular"
                android:includeFontPadding="false"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E3E5"/>

        <!-- الهاتف + إضافة دفعة -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_customer_phone"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/phone"
                    android:textSize="16sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"
                    android:includeFontPadding="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_customer_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_add_custmer_payment"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/add_customer_payment"
                    android:textSize="15sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"
                    android:includeFontPadding="false"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E3E5"/>

        <!-- الحالة + عرض -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_cusotmer_status"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/status"
                    android:textSize="16sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"
                    android:includeFontPadding="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_custoemr_view"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/view"
                    android:textSize="16sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"
                    android:includeFontPadding="false"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E3E5"/>

        <!-- الرصيد + المركبات -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_balance"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/blanace"
                    android:textSize="16sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicles_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_vihcels"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/vehicles"
                    android:textSize="16sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E3E5"/>

        <!-- الحملة + الكمية المتبقية -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_compain"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/campaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/campaign"
                    android:textSize="16sp"
                    android:textColor="#6D707C"
                    android:fontFamily="@font/din_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_remain_compain"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/remaining_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remaining_amount"
                    android:textSize="16sp"
                    android:layout_marginRight="16dp"
                    android:textColor="#6D707C"
                    android:gravity="center"
                    android:fontFamily="@font/din_regular"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
