<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:paddingBottom="8dp"
    android:background="@drawable/dialog_background_inset">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete_process"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:textColor="#5608F3"
            android:fontFamily="@font/din_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:src="@drawable/ic_rounded_close_blue"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_delete_process_txt"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#E91E63"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/din_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="26dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="26dp"
                android:layout_marginLeft="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_red"
                    android:padding="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:fontFamily="@font/din_medium"
                    android:textSize="15sp"
                    android:text="@string/confirm"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="26dp"
                android:layout_marginLeft="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/close_btn"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_transparent_blue_border"
                    android:padding="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:fontFamily="@font/din_medium"
                    android:textSize="15sp"
                    android:text="@string/close"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>